Minor changes index.css, package.json
Resized profile pic, updated index.js, fixed package.json homepage

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio-site",
-  "homepage": "https://rodney-e-harris.github.io/rodney-e-harris.github.io",
+  "homepage": "https://rodney-e-harris.github.io/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
